Ecom 1127 fix remove item on mobile v3 (#725)
* Updated checkout style to reflect the updated nesting order for remove link

* Had to remove a margin and add someother styling to make this work

* Trying to fix some merge conflicts with test

* Revert "Had to remove a margin and add someother styling to make this work"

This reverts commit 1ee02fe39046b321cf365ff8318bf95ce5ee5ba9.

* Fixing merge conflicts

* Added back the changes to the margin and changed styling to match changes

--- a/app/design/frontend/Scottsbase/scottsprogram/web/css/source/_scottsprogramcheckout.scss
+++ b/app/design/frontend/Scottsbase/scottsprogram/web/css/source/_scottsprogramcheckout.scss
@@ -461,10 +461,11 @@
     display:none;
   }
   .cart-container{
-    .form-cart .action.update{
-      color: $scottsprogram-orange;
-      span {
-        .actions-toolbar {
+      .form-cart .action.update{
+          color: $scottsprogram-orange;
+      }
+      .actions-toolbar {
+          margin-top: 0 !important;
           a.action-delete {
             color: $scottsprogram-orange;
           }
@@ -1703,8 +1704,7 @@
       padding-bottom:0;
     }
     .actions-toolbar.no-margin{
-      margin-top: 0 !important;
-      margin-bottom: -25px !important;
+      margin-top: 5px !important;
     }
   }
   .cart-container .form-cart .action.update{
@@ -2201,4 +2201,3 @@ div[name="shippingAddress.postcode"] {
     }
   }
 }
-
